--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="app_name">patched</string>
     <string name="theme_name">patched</string>
-    <string name="style_appearance_name">patched Theme</string>
+    <string name="style_appearance_name">patched Theme + icons</string>
     <string name="author">gandhar</string>
     <string name="copyright">gandhar</string>
 </resources>
